--- a/index.htm
+++ b/index.htm
@@ -6,18 +6,18 @@
 <link rel="stylesheet" href="assets/base.css">
 <link rel="stylesheet" href="assets/oocss.css">
 <style type="text/css">
-body {background-color:#162c59;color:#fff;margin:0px;padding:20px 0}
+body {background:#204080;color:#fff;margin:0px;padding:20px 0}
 p, li {-webkit-hyphens:auto;-moz-hyphens:auto;hyphens:auto}
 a, a:hover {color:#33baab}
 p a, li a:hover {color:inherit;text-decoration:underline}
 
-.titles 		{background-color:#33baab;padding-left:2em;margin-left:5em;margin-right:0}
+.titles 		{background:#33baab;padding-left:2em;margin-left:5em;margin-right:0}
 .H1, .pagetitle	{font-size:400%;line-height:1;padding-top:.64ex}
 .H2, .subtitle	{font-size:200%;line-height:1;padding-bottom:.64ex}
 
 .content-main		{margin:20px 20px 20px -10px}
 .repolist			{margin-right:20px}
-.repolist, .features{background-color:#162c59;margin-top:0}
+.repolist, .features{background:#162c59;margin-top:0}
 .repolist .inner	{padding:20px 30px}
 .features .inner	{padding:10px 20px}
 .media 				{text-align:right}
